--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,15 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.6</version>
         </dependency>
+
+        <!-- Зависимость для WebDriverManager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
