--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>5.3.2</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
             <!-- Библиотека TestNG-->
@@ -36,7 +36,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.7.0</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
